# src/escrow/agreements/views.py
@@ -59,6 +59,7 @@ class AgreementTermsSerializer(serializers.Serializer[Any]):
     fee_bps = serializers.IntegerField()
     delivery_window_days = serializers.IntegerField()
     delivery_due_at = serializers.DateTimeField(allow_null=True)
+    inspection_deadline_at = serializers.DateTimeField(allow_null=True)
     realtime_sequence = serializers.IntegerField(min_value=0)
 
 
